<resources>
    <string name="app_name">Note to Self</string>
    <string name="action_settings">Settings</string>

    <string name="action_add">add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="cansel_button">Cansel</string>
    <string name="ok_button">OK</string>

    <string name="settings_title">Settings</string>

    <string name="add_new_note">Add a new note</string>
    <string name="your_note">Your note</string>
</resources>